--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,40 @@
 version: '3.7'
 
+networks:
+  host_network:
+
 services:
   dshex-bot:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: "dshex-bot"
     depends_on:
-      - db
+      - mongo
     volumes:
       - .:/dshex-bot
 
-  db:
-    container_name: mysql
-    image: mysql:latest
+  mongo:
+    image: mongo:latest
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=dshex-bot
-    ports:
-      - "3306:3306"
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
     volumes:
-      - db-vol:/var/lib/mysql
+      - /etc/data/db:/data/db
+    networks:
+      - host_network
 
-  phpmyadmin:
-    container_name: phpmyadmin
-    image: phpmyadmin/phpmyadmin:latest
+  mongo-express:
+    image: mongo-express
     restart: always
-    depends_on:
-      - db
     ports:
-      - "80:80"
-
-volumes:
-  db-vol:
+      - "8080:8080"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+    depends_on:
+      - mongo
+    networks:
+      - host_network
